# rotom

./: .gitignore  LICENSE  README.md  justfile  pixi.toml  requirements-lerobot.txt  requirements.txt
docs/: Nano_ScreenShare.md  ros2_macROS2.md  ros2_workspace.md
legacy/: pixi.md
legacy/current_robot_2026-03/src/: NOTICE
legacy/current_robot_2026-03/src/examples/: change_id.py  change_torque.py  export_joint_limits.py
legacy/current_robot_2026-03/src/motors/: encoding_utils.py
legacy/current_robot_2026-03/src/ros2_ws/src/rotom_control/: setup.cfg  setup.py
legacy/current_robot_2026-03/src/ros2_ws/src/rotom_description/: setup.cfg  setup.py
scripts/: cyclonedds.xml  repo_python_env.sh  ros2_clean_env.sh  ros2_gui_env.sh  ros2_repo_python_env.sh  ros2_reset.sh
src/: do_this.txt  filler.py  ros2_createpackage.md  ros2_macROS2.md  ros2_moveit.md  ros2_remoteVis.md  ros2_workspace.md
src/examples/: annotate_episode.py  charuco_calibrate.py  convert_to_lerobot_dataset.py  export_joint_limits.py  feetech_example.py  home.py  homing_offset.py  pull_lerobot_dataset.py  task_home.py  task_step.py  task_step_pitch.py
src/motors/: __init__.py  calibration_gui.py  feetech.py  feetech_example.py  motors_bus.py  tables.py
src/motors/feetech/: feetech_example.py
src/ros2_ws/install/: local_setup.sh  setup.sh
src/ros2_ws/install/rotom_control/share/rotom_control/: package.bash  (+5 more)
src/ros2_ws/log/: latest_build
src/ros2_ws/src/rotom_control/: package.xml  setup.py
src/ros2_ws/src/rotom_control/config/: rotom_control.yaml
src/ros2_ws/src/rotom_control/launch/: rotom_control.launch.py
src/ros2_ws/src/rotom_control/rotom_control/: ros2_motor_bridge.py
src/ros2_ws/src/rotom_data/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/rotom_data/config/: episode_recorder.yaml
src/ros2_ws/src/rotom_data/launch/: demo_record_core.launch.py  demo_record_hw.launch.py  episode_recorder.launch.py
src/ros2_ws/src/rotom_data/resource/: rotom_data
src/ros2_ws/src/rotom_data/rotom_data/: episode_recorder_node.py
src/ros2_ws/src/rotom_description/: package.xml  setup.py
src/ros2_ws/src/rotom_description/launch/: view_robot.launch.py
src/ros2_ws/src/rotom_description/meshes/visual/: ground.stl  link4.stl
src/ros2_ws/src/rotom_description/rviz/: view_robot.rviz
src/ros2_ws/src/rotom_description/urdf/: rotom.urdf  rotom.urdf.xacro
src/ros2_ws/src/rotom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ros2_ws/src/rotom_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_servo.yaml  ros2_controllers.yaml  rotom.ros2_control.xacro  rotom.srdf  rotom.urdf.xacro
src/ros2_ws/src/rotom_moveit_config/launch/: aruco_follow_hw.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_hw.launch.py  servo_hw.launch.py  spawn_controllers.launch.py  teleop_hw.launch.py
src/ros2_ws/src/rotom_moveit_config_temp/: .setup_assistant  CMakeLists.txt  package.xml
src/ros2_ws/src/rotom_moveit_config_temp/config/: initial_positions.yaml  rotom.ros2_control.xacro
src/ros2_ws/src/rotom_moveit_config_temp/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ros2_ws/src/rotom_servo/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/rotom_servo/launch/: twist_relay.launch.py
src/ros2_ws/src/rotom_servo/rotom_servo/: twist_relay_node.py
src/ros2_ws/src/rotom_task_control/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/rotom_task_control/config/: mediapipe_task_input.yaml  planar_task_controller.yaml  policy_inference.yaml
src/ros2_ws/src/rotom_task_control/launch/: task_control_hw.launch.py  task_policy_hw.launch.py  task_teleop_hw.launch.py
src/ros2_ws/src/rotom_task_control/resource/: rotom_task_control
src/ros2_ws/src/rotom_task_control/rotom_task_control/: kinematics.py  mediapipe_task_input_node.py  planar_task_controller_node.py  policy_inference_node.py
src/ros2_ws/src/rotom_teleop/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/rotom_teleop/config/: mediapipe_teleop.yaml
src/ros2_ws/src/rotom_teleop/launch/: mediapipe_teleop.launch.py
src/ros2_ws/src/rotom_teleop/resource/: rotom_teleop
src/ros2_ws/src/rotom_teleop/rotom_teleop/: mediapipe_teleop_node.py
src/ros2_ws/src/rotom_vision/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/rotom_vision/config/: vision_pipeline.yaml
src/ros2_ws/src/rotom_vision/launch/: aruco_tracker.launch.py  camera_stream.launch.py  marker_follow.launch.py  view_aruco.launch.py  view_camera.launch.py  vision_pipeline.launch.py
src/ros2_ws/src/rotom_vision/resource/: rotom_vision
src/ros2_ws/src/rotom_vision/rotom_vision/: aruco_tracker_node.py  drag_target_servo_node.py  image_monitor_node.py  marker_follower_node.py  stereo_splitter_node.py  visual_servo_node.py
teleop/: README.md  mac_mediapipe_sender.py  requirements-mac.txt
(+100 files in other folders)
