<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rotom_data</name>
  <version>0.0.0</version>
  <description>Episode-oriented demonstration recording for Rotom.</description>
  <maintainer email="ckp634@my.utexas.edu">caden</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rotom_task_control</depend>
  <depend>rotom_vision</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
